<resources>
    <string name="app_name">UB书店</string>
    <string name="shop">我的书店</string>
    <string name="order">我的订单</string>
    <string name="mine">个人中心</string>

    <string name="main_page">首页</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <string name="to_login">去登陆</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="logout">退出登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_to_register">注册新用户</string>
    <string name="code">短信验证码</string>
    <string name="new_password">设置新密码，最少6位,最长16位</string>
    <string name="get_code">获取验证码</string>
    <string name="old_pwd">原密码</string>
    <string name="submit">确定</string>
    <string name="password">设置密码，最少6位,最长16位</string>
    <string name="ensure_password">确认密码</string>
    <string name="mobile_no">输入手机号码，用于找回账号</string>

    <string name="username_hint">手机号</string>
    <string name="password_hint">密码</string>

    <string name="register_login">注册和登陆</string>

    <string name="apply_for_shop">申请开店</string>

    <string name="suggest_apply_for_shop">您还没有开店，快去申请开店</string>

    <string name="contacts">联系人</string>
    <string name="shop_name">店名</string>
    <string name="contact_number">联系电话</string>

    <string name="address">地址</string>
    <string name="next">下一步</string>
    <string name="detail_address_hint">请输入详细地址</string>
    <string name="id">身份证号码，需和联系人一致</string>

    <string name="id_front">身份证正面照,点击下图上传</string>
    <string name="id_back">身份证背面照,点击下图上传</string>
    <string name="submit_pply">提交申请</string>

    <string name="login_other_account">登陆其他账户</string>
    <string name="repeat_submit_info">重新提交信息</string>

    <string name="audit_failure">审核失败</string>
    <string name="auditing">审核中</string>

    <string name="add_new_book">新书上架</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="book_name">书名</string>
    <string name="isbn">ISBN</string>
    <string name="price">价格</string>
    <string name="press">出版社</string>
    <string name="author">作者</string>
    <string name="category">分类</string>
    <string name="stock">库存</string>
    <string name="percent_describe">品相(例如八成新)</string>
    <string name="sales_volume">销量</string>
    <string name="detail">详情</string>

    <string name="edit">修改</string>

    <string name="added">上架</string>
    <string name="shelves">下架</string>
    <string name="book_empty">书架空空如也，快去上架新书吧</string>
    <string name="order_empty">暂时没有未处理的订单</string>
    <string name="goto_other_order">去查看所有订单</string>
    <string name="pay">待付款</string>
    <string name="book">书</string>
    <string name="customer">顾客</string>
    <string name="shipped">确认发货</string>
    <string name="deliver">待发货</string>
    <string name="express">配送中</string>
    <string name="evaluate">待评价</string>
    <string name="finish">已完成</string>
    <string name="this_order_empty">您暂时没有相关订单</string>
    <string name="grade">评分：</string>
    <string name="comment_empty">暂无评论</string>
    <string name="comment">查看评论</string>
    <string name="conversaction">会话列表</string>
    <string name="suggest_to_login_text">您还没有登陆，请登录后再试</string>
    <string name="edit_shop_info">编辑书店信息</string>
    <string name="mobileno">登陆账号</string>
    <string name="username">用户名</string>
    <string name="statistics">信息统计</string>
    <string name="prefer_count">收藏量</string>
    <string name="price_statistics">价格汇总</string>
    <string name="message">消息</string>
</resources>
