<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.weiqianghu.usedbook_shop.view.customview.ClearEditText
                android:id="@+id/et_mobile_no"
                style="@style/username_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mobile_no" />

            <Button
                android:id="@+id/btn_send_sms_code"
                style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn_bg"
                android:text="@string/get_code" />
        </LinearLayout>

        <com.weiqianghu.usedbook_shop.view.customview.ClearEditText
            android:id="@+id/et_code"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code" />

        <com.weiqianghu.usedbook_shop.view.customview.ClearEditText
            android:id="@+id/et_password"
            style="@style/password_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <com.weiqianghu.usedbook_shop.view.customview.ClearEditText
            android:id="@+id/et_ensuer_password"
            style="@style/password_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ensure_password" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/small_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/register" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="@dimen/large_dp"
        android:layout_height="@dimen/large_dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>
