<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.weiqianghu.usedbook_shop.view.fragment.SuggestApplyForShopFragment">

    <Button
        android:id="@+id/btn_suggest_apply_for_shop"
        style="@style/common_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/suggest_apply_for_shop"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_suggest_apply_for_shop"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_login_other_account"
            style="@style/link_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/login_other_account" />

        <TextView
            android:id="@+id/tv_repeat_submit_info"
            style="@style/link_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/repeat_submit_info" />
    </LinearLayout>
</RelativeLayout>
