<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.weiqianghu.usedbook_shop.view.customview.ClearEditText
            android:id="@+id/et_username"
            style="@style/username_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.weiqianghu.usedbook_shop.view.customview.ClearEditText
            android:id="@+id/et_password"
            style="@style/password_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            style="@style/small_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/login"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_goto_register"
                style="@style/link_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_register" />

            <TextView
                android:id="@+id/tv_forget_password"
                style="@style/link_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forget_password" />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="@dimen/large_dp"
        android:layout_height="@dimen/large_dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>
